kubernetes/homelab/apps/plex/peerauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: plex
  namespace: plex
spec:
  selector:
    matchLabels:
      app: plex
  mtls:
    mode: PERMISSIVE  # Allow both mTLS and plain text for health checks
