kubernetes/homelab/apps/plex/virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: plex
  namespace: plex
spec:
  hosts:
  - plexx.daddyshome.fr
  gateways:
  - istio-ingress/homelab-mtls-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: plex
        port:
          number: 32400
